# pixellab-mcp

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
pixellab_mcp/: __init__.py  __main__.py  server.py
pixellab_mcp/tools/: animate.py  character.py  edit.py  generate.py  http_client.py  image_utils.py  management.py  objects.py  rotate.py  tiles.py  utils.py  ws_client.py
