[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixellab-mcp"
version = "0.1.0"
description = "MCP server wrapping the PixelLab private WebSocket API – all 44+ endpoints as MCP tools"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
    "pixellab>=1.0.5",
]

[project.scripts]
pixellab-mcp = "pixellab_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["pixellab_mcp"]
